# handwrite-ocr-preprocessor

./: README.md  package.json  start.sh
.github/workflows/: build.yml
apps/clinic-bridge/: Cargo.toml
backend/: README.md  image_utils.py  main.py  requirements.txt
frontend/: README.md  index.html
src/: index.js
src/config/: db.js  openaiConfig.js
src/controllers/: whatsappController.js
src/middleware/: conversationContext.js
src/services/: openaiService.js  patientService.js
